--- a/.github/workflows/pr-build-and-e2e-tests.yml
+++ b/.github/workflows/pr-build-and-e2e-tests.yml
@@ -1,6 +1,6 @@
 name: Run tests against PR
 on:
-    #workflow_dispatch:
+    workflow_dispatch:
     #pull_request:
         #paths-ignore:
             #- '**/changelog/**'
