--- a/.github/workflows/smoke-test-pr-merge.yml
+++ b/.github/workflows/smoke-test-pr-merge.yml
@@ -1,5 +1,6 @@
 name: Run tests against trunk after PR merge
 on:
+  workflow_dispatch: 
     #pull_request:
         #types:
             #- closed
