--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -204,7 +204,7 @@ jobs:
     needs: [
       'project-jobs',
       'project-lint-jobs',
-      'project-test-jobs',
+      'project-default-test-jobs',
       'project-e2e-test-jobs'
     ]
     if: ${{ always() }}
@@ -221,7 +221,7 @@ jobs:
             echo "One or more lint jobs have failed."
             exit 1
           fi
-          result="${{ needs.project-test-jobs.result }}"
+          result="${{ needs.project-default-test-jobs.result }}"
           if [[ $result != "success" && $result != "skipped" ]]; then
             echo "One or more test jobs have failed."
             exit 1
@@ -292,6 +292,20 @@ jobs:
               --repo woocommerce/woocommerce-test-reports
           fi
 
+
+  slack-alert-e2e-test:
+    name: 'Send Slack alert for e2e tests'
+    needs: [ project-e2e-test-jobs ]
+    if: ${{ contains( needs.*.result, 'success' ) || contains( needs.*.result, 'failure' ) }}
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 'Send Slack notification'
+        uses: automattic/action-test-results-to-slack@v0.3.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          slack_token: ${{ secrets.E2E_SLACK_TOKEN }}
+          slack_channel: ${{ secrets.E2E_TRUNK_SLACK_CHANNEL }}
 
   publish-api-test-reports:
     name: 'Publish API test reports'
