--- a/.github/workflows/blocks-playwright.yml
+++ b/.github/workflows/blocks-playwright.yml
@@ -8,65 +8,43 @@ on:
             - 'plugins/woocommerce/src/Blocks/**'
             - 'plugins/woocommerce/templates/**'
             - 'plugins/woocommerce/patterns/**'
+
     # Allow manually triggering the workflow.
     workflow_dispatch:
-
 
 env:
     FORCE_COLOR: 1
 
 jobs:
-    e2e:
-        name: ${{ matrix.config.name }} [${{ matrix.shards.name }}]
-        timeout-minutes: 60
-        runs-on: ubuntu-latest
-        defaults:
-            run:
-                working-directory: plugins/woocommerce-blocks
-        strategy:
-            fail-fast: false
-            matrix:
-                config:
-                    - name: Default (Block) Theme
-                      file: playwright.config.ts
-                      resultPath: test-results
-                    - name: Classic Theme
-                      file: playwright.classic-theme.config.ts
-                      resultPath: test-results-classic-theme
-                    - name: Side Effects
-                      file: playwright.side-effects.config.ts
-                      resultPath: test-results-side-effects
-                    - name: Block Theme With Templates
-                      file: playwright.block-theme-with-templates.config.ts
-                      resultPath: test-results-block-theme-with-templates
-                shards:
-                    - name: 1/5
-                    - name: 2/5
-                    - name: 3/5
-                    - name: 4/5
-                    - name: 5/5
-        steps:
-            - uses: actions/checkout@v3
-
-            - name: Setup WooCommerce Monorepo
-              uses: ./.github/actions/setup-woocommerce-monorepo
-              with:
-                  install: '@woocommerce/plugin-woocommerce...'
-                  build: '@woocommerce/plugin-woocommerce'
-
-            - name: Install Playwright
-              run: pnpm --filter='@woocommerce/block-library' exec playwright install --with-deps
-
-            - name: Start wp-env
-              run: pnpm --filter='@woocommerce/block-library' env:start
-
-            - name: Run Playwright tests
-              working-directory: plugins/woocommerce-blocks
-              run: pnpm playwright test --config=tests/e2e/${{ matrix.config.file }} --shard ${{ matrix.shards.name }}
-
-            - uses: actions/upload-artifact@v3
-              if: ${{ failure() }}
-              with:
-                  name: playwright-report-${{ matrix.config.name }}
-                  path: plugins/woocommerce-blocks/tests/e2e/artifacts/${{ matrix.config.resultPath }}
-                  if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
+    default-theme:
+        - uses: ./.github/actions/blocks-playwright-template
+          with:
+              name: Default (Block) Theme
+              config: playwright.config.ts
+              result-path: test-results
+              shard-index: [1, 2, 3, 4, 5]
+              shard-total: 5    
+    classic-theme:
+        - uses: ./.github/actions/blocks-playwright-template
+          with:
+              name: Classic Theme
+              config: playwright.classic-theme.config.ts
+              result-path: test-results-classic-theme
+              shard-index: [1, 2, 3, 4]
+              shard-total: 4
+    side-effects:
+        - uses: ./.github/actions/blocks-playwright-template
+          with:
+              name: Side Effects
+              config: playwright.side-effects.config.ts
+              result-path: test-results-side-effects
+              shard-index: [1, 2, 3, 4, 5]
+              shard-total: 5
+    block-theme-with-templates:
+        - uses: ./.github/actions/blocks-playwright-template
+          with:
+              name: Block Theme With Templates
+              config: playwright.block-theme-with-templates.config.ts
+              result-path: test-results-block-theme-with-templates
+              shard-index: [1]
+              shard-total: 1
