--- a/.github/workflows/blocks-playwright.yml
+++ b/.github/workflows/blocks-playwright.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
     default-theme:
-        - uses: ./.github/actions/blocks-playwright-template
+        - uses: ./.github/workflows/blocks-playwright-template.yml
           with:
               name: Default (Block) Theme
               config: playwright.config.ts
@@ -25,7 +25,7 @@ jobs:
               shard-index: [1, 2, 3, 4, 5]
               shard-total: 5    
     classic-theme:
-        - uses: ./.github/actions/blocks-playwright-template
+        - uses: ./.github/workflows/blocks-playwright-template.yml
           with:
               name: Classic Theme
               config: playwright.classic-theme.config.ts
@@ -33,7 +33,7 @@ jobs:
               shard-index: [1, 2, 3, 4]
               shard-total: 4
     side-effects:
-        - uses: ./.github/actions/blocks-playwright-template
+        - uses: ./.github/workflows/blocks-playwright-template.yml
           with:
               name: Side Effects
               config: playwright.side-effects.config.ts
@@ -41,7 +41,7 @@ jobs:
               shard-index: [1, 2, 3, 4, 5]
               shard-total: 5
     block-theme-with-templates:
-        - uses: ./.github/actions/blocks-playwright-template
+        - uses: ./.github/workflows/blocks-playwright-template.yml
           with:
               name: Block Theme With Templates
               config: playwright.block-theme-with-templates.config.ts
