--- a/.github/workflows/blocks-playwright.yml
+++ b/.github/workflows/blocks-playwright.yml
@@ -17,34 +17,57 @@ env:
 
 jobs:
     default-theme:
+        strategy:
+            fail-fast: false
+            matrix:
+                shard-index: [1, 2, 3, 4, 5]
+                shard-total: [5]
         uses: ./.github/workflows/blocks-playwright-template.yml
         with:
             name: Default (Block) Theme
             config: playwright.config.ts
-            result-path: test-results
-            shard-index: [1, 2, 3, 4, 5]
-            shard-total: 5    
+            results-folder: test-results
+            shard-index: ${{ matrix.shard-index }}
+            shard-total: ${{ matrix.shard-total }}
+
     classic-theme:
+        strategy:
+            fail-fast: false
+            matrix:
+                shard-index: [1, 2, 3, 4]
+                shard-total: [4]
         uses: ./.github/workflows/blocks-playwright-template.yml
         with:
             name: Classic Theme
             config: playwright.classic-theme.config.ts
-            result-path: test-results-classic-theme
-            shard-index: [1, 2, 3, 4]
-            shard-total: 4
+            results-folder: test-results-classic-theme
+            shard-index: ${{ matrix.shard-index }}
+            shard-total: ${{ matrix.shard-total }}
+
     side-effects:
+        strategy:
+            fail-fast: false
+            matrix:
+                shard-index: [1, 2, 3, 4, 5]
+                shard-total: [5]
         uses: ./.github/workflows/blocks-playwright-template.yml
         with:
             name: Side Effects
             config: playwright.side-effects.config.ts
-            result-path: test-results-side-effects
-            shard-index: [1, 2, 3, 4, 5]
-            shard-total: 5
+            results-folder: test-results-side-effects
+            shard-index: ${{ matrix.shard-index }}
+            shard-total: ${{ matrix.shard-total }}
+
     block-theme-with-templates:
+        strategy:
+            fail-fast: false
+            matrix:
+                shard-index: [1]
+                shard-total: [1]
         uses: ./.github/workflows/blocks-playwright-template.yml
         with:
             name: Block Theme With Templates
             config: playwright.block-theme-with-templates.config.ts
-            result-path: test-results-block-theme-with-templates
-            shard-index: [1]
-            shard-total: 1
+            results-folder: test-results-block-theme-with-templates
+            shard-index: ${{ matrix.shard-index }}
+            shard-total: ${{ matrix.shard-total }}
