--- a/packages/js/product-editor/package.json
+++ b/packages/js/product-editor/package.json
@@ -49,7 +49,7 @@
 		"@woocommerce/number": "workspace:*",
 		"@woocommerce/settings": "^1.0.0",
 		"@woocommerce/tracks": "workspace:^",
-		"@wordpress/annotations": "^2.53.0",
+		"@wordpress/annotations": "wp-6.0",
 		"@wordpress/api-fetch": "wp-6.0",
 		"@wordpress/block-editor": "^9.8.0",
 		"@wordpress/blocks": "^12.24.0",
