--- a/packages/js/data/package.json
+++ b/packages/js/data/package.json
@@ -104,8 +104,8 @@
 	"peerDependencies": {
 		"@wordpress/core-data": "wp-6.0",
 		"moment": "^2.18.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"config": {
 		"ci": {
