--- a/plugins/woocommerce-admin/package.json
+++ b/plugins/woocommerce-admin/package.json
@@ -89,8 +89,8 @@
 		"memize": "^1.1.0",
 		"qrcode.react": "^3.1.0",
 		"qs": "^6.11.2",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"react-router-dom": "~6.3.0",
 		"react-transition-group": "^4.4.5",
 		"react-visibility-sensor": "^5.1.1",
