--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
 	"pnpm": {
 		"overrides": {
 			"@types/react": "^17.0.71",
-			"react": "^17.0.2",
+			"react": "18.2.0",
 			"react-resize-aware": "3.1.1"
 		}
 	}
