--- a/packages/js/admin-layout/package.json
+++ b/packages/js/admin-layout/package.json
@@ -68,8 +68,8 @@
 		"jest": "~27.5.1",
 		"jest-cli": "~27.5.1",
 		"postcss-loader": "^4.3.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"rimraf": "^3.0.2",
 		"sass-loader": "^10.5.0",
 		"ts-jest": "~29.1.1",
@@ -80,8 +80,8 @@
 	},
 	"peerDependencies": {
 		"@types/react": "^17.0.71",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"config": {
 		"ci": {
