--- a/packages/js/ai/package.json
+++ b/packages/js/ai/package.json
@@ -87,8 +87,8 @@
 		"mini-css-extract-plugin": "^2.7.6",
 		"postcss": "^8.4.32",
 		"postcss-loader": "^4.3.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"react-hooks^8.0.1": "link:@testing-library/react-hooks^8.0.1",
 		"rimraf": "^3.0.2",
 		"sass-loader": "^10.5.0",
@@ -102,8 +102,8 @@
 	"peerDependencies": {
 		"@types/react": "^17.0.71",
 		"@wordpress/data": "wp-6.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"config": {
 		"ci": {
