--- a/packages/js/block-templates/package.json
+++ b/packages/js/block-templates/package.json
@@ -78,8 +78,8 @@
 		"jest-cli": "~27.5.1",
 		"postcss": "^8.4.32",
 		"postcss-loader": "^4.3.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"rimraf": "^3.0.2",
 		"sass-loader": "^10.5.0",
 		"ts-jest": "~29.1.1",
@@ -90,8 +90,8 @@
 	},
 	"peerDependencies": {
 		"@types/react": "^17.0.71",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"publishConfig": {
 		"access": "public"
