--- a/packages/js/components/package.json
+++ b/packages/js/components/package.json
@@ -122,8 +122,8 @@
 		"@types/react-dom": "^17.0.25",
 		"@wordpress/data": "wp-6.0",
 		"lodash": "^4.17.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -169,7 +169,7 @@
 		"jest-cli": "~27.5.1",
 		"postcss": "^8.4.32",
 		"postcss-loader": "^4.3.0",
-		"react": "^17.0.2",
+		"react": "18.2.0",
 		"rimraf": "^3.0.2",
 		"sass-loader": "^10.5.0",
 		"ts-jest": "~29.1.1",
