--- a/plugins/woo-ai/package.json
+++ b/plugins/woo-ai/package.json
@@ -89,8 +89,8 @@
 		"react-query": "^3.39.3"
 	},
 	"peerDependencies": {
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"engines": {
 		"node": "^16.14.1",
