--- a/plugins/woocommerce-beta-tester/package.json
+++ b/plugins/woocommerce-beta-tester/package.json
@@ -50,8 +50,8 @@
 	"peerDependencies": {
 		"@types/react": "^17.0.71",
 		"@types/react-dom": "^17.0.25",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"assets": {
 		"js": {
