--- a/plugins/woocommerce-blocks/tsconfig.json
+++ b/plugins/woocommerce-blocks/tsconfig.json
@@ -1,5 +1,8 @@
 {
 	"extends": "./tsconfig.base.json",
+	"compilerOptions": {
+		"jsx": "react-jsx"
+	},
 	"include": [
 		"./assets/js/**/*",
 		"./packages/checkout/**/*",
