--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -296,7 +296,7 @@ jobs:
   slack-alert-e2e-test:
     name: 'Send Slack alert for e2e tests'
     needs: [ project-e2e-test-jobs ]
-    if: ${{ contains( needs.*.result, 'success' ) || contains( needs.*.result, 'failure' ) }}
+    if: ${{ github.event_name != 'pull_request' && ( contains( needs.*.result, 'success' ) || contains( needs.*.result, 'failure' ) ) }}
     runs-on: ubuntu-latest
 
     steps:
