--- a/plugins/woocommerce-blocks/package.json
+++ b/plugins/woocommerce-blocks/package.json
@@ -245,7 +245,6 @@
 		"markdown-it": "13.0.1",
 		"merge-config": "2.0.0",
 		"mini-css-extract-plugin": "2.7.6",
-		"patch-package": "6.4.7",
 		"postcss": "8.4.32",
 		"postcss-color-function": "4.1.0",
 		"postcss-loader": "4.3.0",
@@ -279,6 +278,7 @@
 		"pnpm": "^8.12.1"
 	},
 	"dependencies": {
+		"@ariakit/react": "^0.4.3",
 		"@dnd-kit/core": "^6.1.0",
 		"@dnd-kit/modifiers": "^6.0.1",
 		"@dnd-kit/sortable": "^7.0.2",
@@ -318,8 +318,7 @@
 		"request": "2.88.2",
 		"trim-html": "0.1.9",
 		"use-debounce": "9.0.4",
-		"usehooks-ts": "^2.9.1",
-		"wordpress-components": "npm:@wordpress/components@14.2.0"
+		"usehooks-ts": "^2.9.1"
 	},
 	"peerDependencies": {
 		"react": "^17.0.0",
