--- a/plugins/woocommerce-blocks/package.json
+++ b/plugins/woocommerce-blocks/package.json
@@ -318,7 +318,8 @@
 		"request": "2.88.2",
 		"trim-html": "0.1.9",
 		"use-debounce": "9.0.4",
-		"usehooks-ts": "^2.9.1"
+		"usehooks-ts": "^2.9.1",
+		"wordpress-components": "npm:@wordpress/components@14.2.0"
 	},
 	"peerDependencies": {
 		"react": "^17.0.0",
