--- a/plugins/woocommerce-admin/package.json
+++ b/plugins/woocommerce-admin/package.json
@@ -56,7 +56,7 @@
 		"@wordpress/blocks": "^11.21.0",
 		"@wordpress/components": "wp-6.0",
 		"@wordpress/compose": "wp-6.0",
-		"@wordpress/core-data": "wp-6.5",
+		"@wordpress/core-data": "wp-6.0",
 		"@wordpress/data-controls": "wp-6.0",
 		"@wordpress/date": "wp-6.0",
 		"@wordpress/dom": "wp-6.0",
@@ -134,6 +134,7 @@
 		"@types/tinymce": "^4.6.9",
 		"@types/wordpress__components": "^19.10.5",
 		"@types/wordpress__compose": "4.0.1",
+		"@types/wordpress__data": "6.0.0",
 		"@types/wordpress__data-controls": "~2.2.0",
 		"@types/wordpress__media-utils": "3.0.0",
 		"@types/wordpress__notices": "3.3.0",
