WIP update deps and config

--- a/plugins/woocommerce-blocks/package.json
+++ b/plugins/woocommerce-blocks/package.json
@@ -125,18 +125,18 @@
 		"@octokit/action": "5.0.2",
 		"@octokit/graphql": "5.0.5",
 		"@playwright/test": "1.38.1",
-		"@storybook/addon-a11y": "7.5.2",
-		"@storybook/addon-actions": "^7.6.4",
-		"@storybook/addon-docs": "^7.6.4",
-		"@storybook/addon-essentials": "7.5.2",
-		"@storybook/addon-links": "7.5.2",
-		"@storybook/addon-storysource": "7.5.2",
+		"@storybook/addon-a11y": "7.6.17",
+		"@storybook/addon-actions": "7.6.17",
+		"@storybook/addon-docs": "7.6.17",
+		"@storybook/addon-essentials": "7.6.17",
+		"@storybook/addon-links": "7.6.17",
+		"@storybook/addon-storysource": "7.6.17",
 		"@storybook/addon-styling-webpack": "^0.0.5",
-		"@storybook/addons": "7.5.2",
-		"@storybook/client-api": "7.5.2",
-		"@storybook/preview-api": "^7.6.4",
-		"@storybook/react": "7.5.2",
-		"@storybook/react-webpack5": "^7.6.4",
+		"@storybook/addons": "7.6.17",
+		"@storybook/client-api": "7.6.17",
+		"@storybook/preview-api": "7.6.17",
+		"@storybook/react": "7.6.17",
+		"@storybook/react-webpack5": "7.6.17",
 		"@testing-library/dom": "9.3.3",
 		"@testing-library/jest-dom": "5.16.5",
 		"@testing-library/react": "12.1.5",
@@ -261,7 +261,7 @@
 		"rimraf": "5.0.5",
 		"rtlcss": "^4.1.1",
 		"sass-loader": "10.1.0",
-		"storybook": "^7.6.4",
+		"storybook": "7.6.17",
 		"storybook-addon-react-docgen": "1.2.44",
 		"stylelint": "^14.16.1",
 		"terser-webpack-plugin": "5.3.6",
