--- a/.github/workflows/non-cot-pr-build-and-e2e-tests.yml
+++ b/.github/workflows/non-cot-pr-build-and-e2e-tests.yml
@@ -1,6 +1,9 @@
 name: Run tests against PR in an environment with HPOS disabled
 on:
-    pull_request:
+    push:
+      branches:
+        - 'trunk'
+        - 'release/*'
     workflow_dispatch:
 
 concurrency:
